# entity

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-test-deploy.yml  develop-build_test_deploy.yml  topics-build_tests.yml  versiontag-build_test_deploy.yml
conan/: conanfile.py
conan/test_package/: CMakeLists.txt  conanfile.py  example.cpp
conan/workspaces/: CMakeLists.txt  complete.yml  linux_complete.yml
src/: CMakeLists.txt
src/apps/entity_tests/: Archetype_tests.cpp  Blueprint_tests.cpp  CMakeLists.txt  Components_helpers.h  HandleEntity_tests.cpp  Inspector.h  Phase_tests.cpp  QueryEvent_tests.cpp  QueryIteration_tests.cpp  Query_tests.cpp  StateBackup_tests.cpp  Usage_tests.cpp  Wrap_tests.cpp
src/libs/entity/entity/: Archetype.cpp  Archetype.h  ArchetypeStatic.h  ArchetypeStore.cpp  ArchetypeStore.h  Blueprint.h  CMakeFinds.cmake.in  CMakeLists.txt  Component.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Handle.h  HandleKey.h  Query-decl.h  Query.cpp  Query.h  QueryStore.cpp  QueryStore.h  StorageIndex.h  Store.h  Traits.h  Wrap.h
src/libs/entity/entity/detail/: CloningPointer.h  HandledStore.h  Invoker.h  QueryBackend-decl.h  QueryBackend.h
